--- a/package.json
+++ b/package.json
@@ -39,5 +39,17 @@
     "postcss": "^8.4.20",
     "prettier": "2.8.1",
     "tailwindcss": "^3.2.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.+(ts|tsx)": [
+      "npm run lint",
+      "npm run lint:fix",
+      "npm run prettier"
+    ]
   }
 }
