--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@rive-app/react-canvas": "^3.0.34",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -49,9 +50,7 @@
   },
   "lint-staged": {
     "*.+(ts|tsx)": [
-      "npm run lint",
-      "npm run lint:fix",
-      "npm run prettier"
+      "prettier --check --ignore-path .gitignore ."
     ]
   }
 }
