feat: add animated nav items

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,12 @@
 {
-  "extends": ["next", "next/core-web-vitals", "eslint:recommended", "prettier"],
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "prettier"
+  ],
   "rules": {
     // suppress errors for missing 'import React' in files
     "react/react-in-jsx-scope": "off",
