--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,15 +10,11 @@
     "esModuleInterop": true,
     "baseUrl": ".",
     "paths": {
-      "~/ui/*": [
-        "ui/*"
-      ],
-      "~/lib/*": [
-        "lib/*"
-      ],
-      "~/public/*": [
-        "public/*"
-      ]
+      "~/ui/*": ["ui/*"],
+      "~/lib/*": ["lib/*"],
+      "~/utils/*": ["utils/*"],
+      "~/hooks/*": ["hooks/*"],
+      "~/public/*": ["public/*"]
     },
     "module": "esnext",
     "moduleResolution": "node",
@@ -36,13 +28,6 @@
       }
     ]
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
