--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
     "@rive-app/react-canvas": "^3.0.34",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "classnames": "^2.3.2",
+    "clsx": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "gray-matter": "^4.0.3",
@@ -29,6 +32,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-use": "^17.4.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
@@ -38,6 +42,8 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.0",
     "postcss": "^8.4.20",
     "prettier": "2.8.1",
