feat: add hero section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "cSpell.words": ["callout", "commitlint", "tailwindcss"],
+  "cSpell.words": ["callout", "commitlint", "Emon", "Saifur", "tailwindcss"],
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "typescript.enablePromptUseWorkspaceTsdk": true
 }
