--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "format": "prettier --check --ignore-path .gitignore .",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "check-types": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
