--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "baseUrl": ".",
+    "noImplicitAny": true,
     "paths": {
       "~/ui/*": ["ui/*"],
       "~/lib/*": ["lib/*"],
