--- a/package.json
+++ b/package.json
@@ -18,38 +18,43 @@
     "check-types": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.14",
-    "@next/font": "13.4.4",
-    "@rive-app/react-canvas": "^3.0.36",
-    "@types/node": "18.15.11",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.0.11",
+    "@headlessui/react": "^1.7.17",
+    "@next/font": "14.0.4",
+    "@rive-app/react-canvas": "^4.6.2",
+    "@types/node": "20.10.4",
+    "@types/react": "18.2.45",
+    "@types/react-dom": "18.2.18",
     "classnames": "^2.3.2",
-    "clsx": "^1.2.1",
-    "eslint": "8.34.0",
-    "eslint-config-next": "13.4.3",
-    "framer-motion": "^10.9.1",
+    "clsx": "^2.0.0",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.0.4",
+    "framer-motion": "^10.16.16",
     "gray-matter": "^4.0.3",
-    "next": "13.5.5",
+    "next": "14.0.4",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-use": "^17.4.0",
-    "sass": "^1.66.1",
-    "typescript": "5.1.3"
+    "react-use": "^17.4.2",
+    "sass": "^1.69.5",
+    "sugar-high": "^0.5.6",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.13",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@babel/eslint-parser": "^7.23.3",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
+    "@tailwindcss/typography": "^0.5.10",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "autoprefixer": "^10.4.16",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
-    "postcss": "^8.4.21",
-    "prettier": "2.8.4",
-    "tailwindcss": "^3.2.7"
+    "postcss": "^8.4.32",
+    "prettier": "3.1.1",
+    "tailwindcss": "^3.3.6"
   },
   "husky": {
     "hooks": {
