--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
+    "@upstash/redis": "^1.27.1",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "eslint": "8.56.0",
