--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "@upstash/redis": "^1.27.1",
+    "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.3",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "eslint": "8.56.0",
