--- a/package.json
+++ b/package.json
@@ -19,28 +19,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@rive-app/react-canvas": "^4.6.2",
     "@types/node": "20.10.4",
     "@types/react": "18.2.45",
     "@types/react-dom": "18.2.18",
     "@upstash/redis": "^1.27.1",
     "@vercel/analytics": "^1.1.1",
     "@vercel/speed-insights": "^1.0.3",
-    "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "eslint": "8.56.0",
     "eslint-config-next": "14.0.4",
     "framer-motion": "^10.16.16",
-    "gray-matter": "^4.0.3",
     "next": "14.0.4",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-use": "^17.4.2",
-    "sass": "^1.69.5",
-    "sugar-high": "^0.5.6",
-    "typescript": "5.3.3"
+    "sugar-high": "^0.5.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
@@ -56,7 +51,8 @@
     "husky": "^8.0.3",
     "postcss": "^8.4.32",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.3.6"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.3"
   },
   "husky": {
     "hooks": {
